<resources>
    <string name="app_name">JetpackNavigationArchitecture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">sign Up</string>
    <string name="terms">Terms</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter Email</string>
    <string name="thank_you_for_sign_up">Thank you for Sign Up</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
</resources>